--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "db": "json-server --watch db.json --port 5002"
   },
   "dependencies": {
+    "@inkline/inkline": "^3.1.9",
     "core-js": "^3.8.3",
     "json-server": "^0.17.1",
     "vue": "^3.2.13",
