--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "db": "json-server --watch db.json --port 5002"
   },
   "dependencies": {
+    "@inkline/inkline": "^3.1.9",
     "core-js": "^3.8.3",
     "json-server": "^0.17.1",
     "vue": "^3.2.13",
@@ -19,7 +20,7 @@
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
-    "sass": "^1.32.7",
-    "sass-loader": "^12.0.0"
+    "sass": "^1.56.1",
+    "sass-loader": "^10.4.1"
   }
 }
