--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@inkline/inkline": "^3.1.9",
+    "axios": "^1.2.1",
     "core-js": "^3.8.3",
     "json-server": "^0.17.1",
     "vue": "^3.2.13",
