--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "@inkline/inkline": "^3.1.9",
+    "@popperjs/core": "^2.11.6",
     "axios": "^1.2.1",
+    "bootstrap": "^5.2.3",
     "core-js": "^3.8.3",
     "json-server": "^0.17.1",
     "vue": "^3.2.13",
