--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "sass": "^1.56.1",
-    "sass-loader": "^10.4.1"
+    "sass-loader": "^10.4.1",
+    "vue-cli-plugin-mdb5": "~2.1.0"
   }
 }
