--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
   },
   "dependencies": {
     "@inkline/inkline": "^3.1.9",
+    "@popperjs/core": "^2.11.6",
+    "bootstrap": "^5.2.3",
     "core-js": "^3.8.3",
     "json-server": "^0.17.1",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
+    "vuejs3-datepicker": "^1.0.13",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
