--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "json-server": "^0.17.1",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
+    "vuejs3-datepicker": "^1.0.13",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
