--- a/package.json
+++ b/package.json
@@ -8,10 +8,15 @@
     "db": "json-server --watch db.json --port 5002"
   },
   "dependencies": {
+    "@inkline/inkline": "^3.1.9",
+    "@popperjs/core": "^2.11.6",
+    "axios": "^1.2.1",
+    "bootstrap": "^5.2.3",
     "core-js": "^3.8.3",
     "json-server": "^0.17.1",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
+    "vuejs3-datepicker": "^1.0.13",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
@@ -19,7 +24,8 @@
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
-    "sass": "^1.32.7",
-    "sass-loader": "^12.0.0"
+    "sass": "^1.56.1",
+    "sass-loader": "^10.4.1",
+    "vue-cli-plugin-mdb5": "~2.1.0"
   }
 }
